--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "express": "^5.2.1",
     "express-basic-auth": "^1.2.1",
+    "serve-favicon": "^2.5.1",
     "sharp": "^0.34.5"
   },
   "devDependencies": {
